// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`buildManifest default manifest 1`] = `
{
  "behaviorHints": {
    "configurable": true,
    "configurationRequired": false,
    "p2p": false,
  },
  "catalogs": [],
  "config": [
    {
      "key": "multi",
      "title": "Multi 🌐 (4KHDHub, VixSrc)",
      "type": "checkbox",
    },
    {
      "key": "de",
      "title": "German 🇩🇪 (Einschalten, KinoGer, MegaKino, MeineCloud, StreamKiste)",
      "type": "checkbox",
    },
    {
      "key": "en",
      "title": "English 🇺🇸 (PrimeWire, VidSrc, XPrime)",
      "type": "checkbox",
    },
    {
      "key": "es",
      "title": "Castilian Spanish 🇪🇸 (CineHDPlus, Cuevana, HomeCine, VerHdLink)",
      "type": "checkbox",
    },
    {
      "key": "fr",
      "title": "French 🇫🇷 (Frembed, FrenchCloud, Movix)",
      "type": "checkbox",
    },
    {
      "key": "it",
      "title": "Italian 🇮🇹 (Eurostreaming, MostraGuarda, VixSrc)",
      "type": "checkbox",
    },
    {
      "key": "mx",
      "title": "Latin American Spanish 🇲🇽 (CineHDPlus, Cuevana, HomeCine, VerHdLink)",
      "type": "checkbox",
    },
    {
      "key": "showErrors",
      "title": "Show errors",
      "type": "checkbox",
    },
    {
      "key": "includeExternalUrls",
      "title": "Include external URLs in results",
      "type": "checkbox",
    },
    {
      "default": "",
      "key": "mediaFlowProxyUrl",
      "title": "MediaFlow Proxy URL",
      "type": "text",
    },
    {
      "default": "",
      "key": "mediaFlowProxyPassword",
      "title": "MediaFlow Proxy Password",
      "type": "password",
    },
    {
      "default": "",
      "key": "proxyConfig",
      "title": "Proxy Config",
      "type": "text",
    },
    {
      "key": "noCache",
      "title": "Disable cache",
      "type": "checkbox",
    },
  ],
  "description": "Provides HTTP URLs from streaming websites. Configure add-on for additional languages. Add MediaFlow proxy for more URLs.

Supported languages: German, English, Castilian Spanish, French, Italian, Latin American Spanish

Supported sources: 4KHDHub, VixSrc, PrimeWire, VidSrc, XPrime, CineHDPlus, Cuevana, HomeCine, VerHdLink, Einschalten, KinoGer, MegaKino, MeineCloud, StreamKiste, Frembed, FrenchCloud, Movix, Eurostreaming, MostraGuarda

Supported extractors: ",
  "id": "webstreamr",
  "idPrefixes": [
    "tmdb:",
    "tt",
  ],
  "name": "WebStreamr",
  "resources": [
    "stream",
  ],
  "stremioAddonsConfig": {
    "issuer": "https://stremio-addons.net",
    "signature": "eyJhbGciOiJkaXIiLCJlbmMiOiJBMTI4Q0JDLUhTMjU2In0..D3-Wl15vxnYltwx8G52rRg.16-0VzsSgTvnv0wampIR8YPZsFhH8-7IgpuqxcUfC2p7kIJtuk8xQzrzqQOLXANEpaH_w7a4JOEpNo8wv28Zo_nMGCLOXgWbyGM3sQ-tfq6DCK3JU0ol6YMC1UDX2z_c.IOLlZyTYx_swutjYSTES0Q",
  },
  "types": [
    "movie",
    "series",
  ],
  "version": Any<String>,
}
`;

exports[`buildManifest disable extractors 1`] = `
[
  {
    "key": "showErrors",
    "title": "Show errors",
    "type": "checkbox",
  },
  {
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
  {
    "default": "",
    "key": "proxyConfig",
    "title": "Proxy Config",
    "type": "text",
  },
  {
    "key": "noCache",
    "title": "Disable cache",
    "type": "checkbox",
  },
  {
    "default": "checked",
    "key": "disableExtractor_doodstream",
    "title": "Disable extractor DoodStream",
    "type": "checkbox",
  },
  {
    "key": "disableExtractor_supervideo",
    "title": "Disable extractor SuperVideo",
    "type": "checkbox",
  },
]
`;

exports[`buildManifest has checked includeExternalUrls 1`] = `
[
  {
    "key": "showErrors",
    "title": "Show errors",
    "type": "checkbox",
  },
  {
    "default": "checked",
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
  {
    "default": "",
    "key": "proxyConfig",
    "title": "Proxy Config",
    "type": "text",
  },
  {
    "key": "noCache",
    "title": "Disable cache",
    "type": "checkbox",
  },
]
`;

exports[`buildManifest has checked noCache 1`] = `
[
  {
    "key": "showErrors",
    "title": "Show errors",
    "type": "checkbox",
  },
  {
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
  {
    "default": "",
    "key": "proxyConfig",
    "title": "Proxy Config",
    "type": "text",
  },
  {
    "default": "checked",
    "key": "noCache",
    "title": "Disable cache",
    "type": "checkbox",
  },
]
`;

exports[`buildManifest has checked showErrors 1`] = `
[
  {
    "default": "checked",
    "key": "showErrors",
    "title": "Show errors",
    "type": "checkbox",
  },
  {
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
  {
    "default": "",
    "key": "proxyConfig",
    "title": "Proxy Config",
    "type": "text",
  },
  {
    "key": "noCache",
    "title": "Disable cache",
    "type": "checkbox",
  },
]
`;

exports[`buildManifest has checked source with appropriate config 1`] = `
[
  {
    "default": "checked",
    "key": "de",
    "title": "German 🇩🇪 (MeineCloud, StreamKiste)",
    "type": "checkbox",
  },
  {
    "key": "es",
    "title": "Castilian Spanish 🇪🇸 (VerHdLink)",
    "type": "checkbox",
  },
  {
    "key": "mx",
    "title": "Latin American Spanish 🇲🇽 (VerHdLink)",
    "type": "checkbox",
  },
  {
    "key": "showErrors",
    "title": "Show errors",
    "type": "checkbox",
  },
  {
    "default": "checked",
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
  {
    "default": "",
    "key": "proxyConfig",
    "title": "Proxy Config",
    "type": "text",
  },
  {
    "key": "noCache",
    "title": "Disable cache",
    "type": "checkbox",
  },
]
`;

exports[`buildManifest has unchecked source without a config 1`] = `
[
  {
    "key": "multi",
    "title": "Multi 🌐 (VixSrc)",
    "type": "checkbox",
  },
  {
    "key": "de",
    "title": "German 🇩🇪 (MeineCloud, StreamKiste)",
    "type": "checkbox",
  },
  {
    "key": "es",
    "title": "Castilian Spanish 🇪🇸 (VerHdLink)",
    "type": "checkbox",
  },
  {
    "key": "it",
    "title": "Italian 🇮🇹 (VixSrc)",
    "type": "checkbox",
  },
  {
    "key": "mx",
    "title": "Latin American Spanish 🇲🇽 (VerHdLink)",
    "type": "checkbox",
  },
  {
    "key": "showErrors",
    "title": "Show errors",
    "type": "checkbox",
  },
  {
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
  {
    "default": "",
    "key": "proxyConfig",
    "title": "Proxy Config",
    "type": "text",
  },
  {
    "key": "noCache",
    "title": "Disable cache",
    "type": "checkbox",
  },
]
`;

exports[`buildManifest showErrors and includeExternalUrls are unchecked by default 1`] = `
[
  {
    "key": "showErrors",
    "title": "Show errors",
    "type": "checkbox",
  },
  {
    "key": "includeExternalUrls",
    "title": "Include external URLs in results",
    "type": "checkbox",
  },
  {
    "default": "",
    "key": "mediaFlowProxyUrl",
    "title": "MediaFlow Proxy URL",
    "type": "text",
  },
  {
    "default": "",
    "key": "mediaFlowProxyPassword",
    "title": "MediaFlow Proxy Password",
    "type": "password",
  },
  {
    "default": "",
    "key": "proxyConfig",
    "title": "Proxy Config",
    "type": "text",
  },
  {
    "key": "noCache",
    "title": "Disable cache",
    "type": "checkbox",
  },
]
`;
